--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "create-react-app": "node tasks/cra.js",
     "e2e": "tasks/e2e-simple.sh",
     "e2e:docker": "tasks/local-test.sh",
-    "postinstall": "pwd && ls && cd ./packages/react-error-overlay/ && yarn build:prod",
+    "postinstall": "cd ./packages/react-error-overlay/ && ls && yarn build:prod",
     "publish": "tasks/publish.sh",
     "start": "cd packages/react-scripts && node bin/react-scripts.js start",
     "screencast": "node ./tasks/screencast.js",
